# device_board_chipsea

./: BUILD.gn  Kconfig.liteos_m.boards  Kconfig.liteos_m.defconfig.boards  Kconfig.liteos_m.shields  OAT.xml  README.md  README_zh.md
cst85_wblink/: BUILD.gn  Kconfig.liteos_m.board  Kconfig.liteos_m.defconfig.board  cst85_wblink_defconfig  ohos.build
cst85_wblink/liteos_m/: config.gni
